tests/wordpress/fail/wp-includes/version.php
/**
 *  * The WordPress version string
 *   *
 *    * @global string $wp_version
 *     */
$wp_version = '3.0.2';

